tests/NormalTests/paczka1/fuzzy1/47717204.err
Error in line 3: phJo A101 72,0
Error in line 7: phJo A604 49,6
Error in line 11: CQhmmN S63q 6,7
Error in line 19: V0teixx4sUf S638 46,6
Error in line 13: e0mG1KW86jS A604 79,2
Error in line 17: A101 S304 76,5
Error in line 29: e0mG1KW86jS S304 64,7
Error in line 31: V0teixx4sUf S304 41,8
Error in line 33: Wx1OQFfVu7M A604 59,8
